2005-03-21  Tom Tromey  <tromey@redhat.com>

	* model/method.cc (create_abstract_instance): Create a
	model_abstract_method.
	* aot/aotclass.cc (find_in_vtable): Strip abstract methods.
	* model/invoke.cc (find_method): Create a model_abstract_method.
	* model/method.hh (class model_abstract_method): New class.

2005-03-12  Tom Tromey  <tromey@redhat.com>

	* model/constructor.cc (model_constructor): New constructor.
	(model_constructor): Correctly set this0.
	* model/constructor.hh (model_constructor): Declare.
	* bytecode/generate.cc (visit_new): Use accessor constructor if
	needed.
	(visit_type_qualified_invocation): Handle accessor.
	(visit_super_invocation): Likewise.
	* model/invoke.cc (handle_resolve): Add extra arguments when
	calling constructor accessor.
	(resolve): Handle class in static context.
	* model/method.hh (model_method::get_parameter_count): New
	method.
	* model/class.cc (get_accessor): Create accessor constructor.

2005-03-03  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (add_item): Ignore index 0.

2005-03-03  Tom Tromey  <tromey@redhat.com>

	* bytecode/classreader.cc (parse_constant_value): Special case
	initializers of boolean fields.

2005-02-27  Tom Tromey  <tromey@redhat.com>

	* header/cni.cc (write_includes): Changed argument types.
	(generate): Use get_sorted_methods.
	* header/cni.hh (cni_code_generator::method_iterator): New
	typedef.
	(cni_code_generator::write_includes): Changed argument types.
	* aot/aotclass.cc (lay_out_vtable): Use get_sorted_methods.  Skip
	final methods from Object.
	(add_item): Don't use slot 0 of constant pool.
	* model/class.cc (resolve_one_method): Updated
	source_order_methods.
	(add_method): Likewise.
	(inherit_methods): Likewise.
	(resolve_members): Likewise.
	* model/class.hh (model_class::source_order_methods): New field.
	(model_class::get_sorted_methods): New method.

2005-02-26  Tom Tromey  <tromey@redhat.com>

	* aot/aotclass.cc (lay_out_vtable): Added debug code.
